--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8">
-  <title>imnotbreadanymore</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>대전 맛집 지도</title>
+
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 </head>
 <body>
-  <h1>🍜 imnotbreadanymore</h1>
-  <p>대전 맛집 지도 프로젝트 시작!</p>
+  <header class="topbar">
+    <div class="logo">🍜 대전 맛집 지도</div>
+    <div class="hint">마커 클릭 → 상세페이지</div>
+  </header>
+
+  <main>
+    <div id="map"></div>
+  </main>
+
+  <script src="app.js"></script>
 </body>
 </html>
