feat: remove AWS dependency and use local storage

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <div id="user-info" style="display: none; justify-content: space-between; align-items: center; margin-top: 15px; background: #fff5f5; padding: 15px; border-radius: 18px; border: 1px solid #ffe3e3;">
                     <span style="font-size: 14px; font-weight: 700; color: #ff6b6b;">👋 <span id="display-user-id"></span>님, 반가워요!</span>
-                    <button class="btn-auth" style="padding: 6px 12px; flex: none; font-size: 11px; border-radius: 8px;" onclick="location.reload()">로그아웃</button>
+                    <button class="btn-auth" style="padding: 6px 12px; flex: none; font-size: 11px; border-radius: 8px;" onclick="logout()">로그아웃</button>
                 </div>
             </header>
             
